--- a/StudentRoleTrackerREST/WebContent/css/styles.css
+++ b/StudentRoleTrackerREST/WebContent/css/styles.css
@@ -1,4 +1,4 @@
-#content {
+/* #content {
 	background-color: grey;
 }
 
@@ -8,4 +8,8 @@
 
 button:hover {
 	background-color: blue;
+} */
+
+#newStudentBtn {
+	margin-right: 2cm;
 }
